Use a root products for list of products in response