@@ -1,6 +1,7 @@
 package com.ecommerce.service;
 
 import com.ecommerce.dto.request.ProductRequest;
+import com.ecommerce.dto.response.ProductListResponse;
 import com.ecommerce.dto.response.ProductResponse;
 import com.ecommerce.exception.ProductNotFoundException;
 import com.ecommerce.external.api.ProductStoreClient;
@@ -8,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -22,10 +24,10 @@ public class FakeStoreProductService implements ProductService {
     }
 
     @Override
-    public List<ProductResponse> getAllProducts(){
+    public ProductListResponse getAllProducts(){
         var response = productStoreClient.getAllProducts();
-        if (response == null || response.getBody() == null) return List.of();
-        return response.getBody();
+        if (response == null || response.getBody() == null) return new ProductListResponse(Collections.emptyList());
+        return new ProductListResponse(response.getBody());
     }
 
     @Override
